version 0.008; 2013-07-14

  * bugfix: require bugfixed version of DateTime::TimeZone::SystemV to
    handle POSIX-TZ field showing transitions occurring at 24:00

  * in META.{yml,json}, point to public git repository

version 0.007; 2012-03-10

  * bugfix: recognise zone disuse indicator if it comes in the form of
    the POSIX-TZ extension rule

  * distinguish between zone disuse and missing data

  * eliminate use of Date::JD, because it's too heavy to justify the
    minimal convenience gained from it

  * eliminate use of constant.pm, for stylistic consistency

  * test more error cases

  * test behaviour around leap seconds

  * factor out date/time presentation code used for error messages

  * for CRLF test, use a smaller tzfile that tickles the same potential
    bug

  * give test tzfiles appropriately capitalised names

  * convert .cvsignore to .gitignore

version 0.006; 2011-09-27

  * include the time and zone name in error messages about non-existent
    local time and unrepresented time

  * check argument types in constructor

  * make test suite work even if DateTime is not available

version 0.005; 2011-04-05

  * bugfix: read tzfiles in binary mode

  * include META.json in distribution

  * add MYMETA.json to .cvsignore

version 0.004; 2010-08-31

  * for the Olson "Factory" timezone, which has a pseudo-abbreviation
    containing spaces, don't process the TZ value that it contains,
    because it's invalid and DateTime::TimeZone::SystemV objects to it

  * tighten the criteria for recognising the special observance that
    indicates that local time is not defined (abbreviation "zzz" was
    previously the sole criterion, now also require zero offset and
    not DST)

  * allow the ->is_olson and ->category values to be specified to the
    constructor, instead of having fixed values

  * when a local time is non-existent due to an undefined observance,
    give an error message that says so, rather than conflating it with