@@ -1,3 +1,5 @@
+  * support version 3 of the tzfile format
+
 version 0.008; 2013-07-14
 
   * bugfix: require bugfixed version of DateTime::TimeZone::SystemV to
